--- a/.gitignore
+++ b/.gitignore
@@ -22,5 +22,12 @@ DerivedData
 # CocoaPods
 Pods
 
-
 ~                                                                                                                                                   
+
+Podfile.lock
+
+ACSAPISample.xcworkspace/xcuserdata/swilson.xcuserdatad/UserInterfaceState.xcuserstate
+
+ACSAPISample.xcworkspace/xcuserdata/swilson.xcuserdatad/xcdebugger/Breakpoints_v2.xcbkptlist
+
+Podfile.lock
